--- a/JennyCasey_Assign6/JennyCasey_Assign6.csproj
+++ b/JennyCasey_Assign6/JennyCasey_Assign6.csproj
@@ -65,6 +65,18 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form6.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form6.Designer.cs">
+      <DependentUpon>Form6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form7.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form7.Designer.cs">
+      <DependentUpon>Form7.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -101,6 +113,8 @@
   <ItemGroup>
     <Content Include="GradePercentsOnAssigns.txt" />
     <Content Include="LoLMinionKills.txt" />
+    <Content Include="Form6Input.txt" />
+    <Content Include="Form7Input.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
