adding in the exit functionality for form1, when user clicks upper right hand corner X, we should leave the form

--- a/JennyCasey_Assign6/JennyCasey_Assign6.csproj
+++ b/JennyCasey_Assign6/JennyCasey_Assign6.csproj
@@ -118,7 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GradePercentsOnAssigns.txt" />
-    <Content Include="LoLMinionKills.txt" />
+    <Content Include="LoLGemsAcquired.txt" />
     <Content Include="Form6Input.txt" />
     <Content Include="Form7Input.txt" />
   </ItemGroup>
